--- a/paper/master.bib
+++ b/paper/master.bib
@@ -1,7 +1,7 @@
 @ARTICLE{bede19,
        author = {{Bedell}, Megan and {Hogg}, David W. and {Foreman-Mackey}, Daniel and {Montet}, Benjamin T. and {Luger}, Rodrigo},
         title = "{WOBBLE: A Data-driven Analysis Technique for Time-series Stellar Spectra}",
-      journal = {\aj},
+      journal = {Astronomical Journal},
      keywords = {atmospheric effects, methods: data analysis, planets and satellites: detection, stars: individual: 51 Pegasi, Barnard's Star, HD 189733, techniques: radial velocities, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
          year = 2019,
         month = oct,
@@ -22,7 +22,7 @@ archivePrefix = {arXiv},
    author = {{Crockett}, C.~J. and {Mahmud}, N.~I. and {Prato}, L. and {Johns-Krull}, C.~M. and
 	{Jaffe}, D.~T. and {Hartigan}, P.~M. and {Beichman}, C.~A.},
     title = "{A Search for Giant Planet Companions to T Tauri Stars}",
-  journal = {\apj},
+  journal = {Astrophysical Journal},
 archivePrefix = "arXiv",
    eprint = {1211.1389},
  primaryClass = "astro-ph.EP",
@@ -40,7 +40,7 @@ archivePrefix = "arXiv",
 @ARTICLE{gull14,
        author = {{Gullikson}, Kevin and {Dodson-Robinson}, Sarah and {Kraus}, Adam},
         title = "{Correcting for Telluric Absorption: Methods, Case Studies, and Release of the TelFit Code}",
-      journal = {\aj},
+      journal = {Astronomical Journal},
      keywords = {atmospheric effects, instrumentation: spectrographs, techniques: spectroscopic, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
          year = 2014,
         month = sep,
@@ -79,7 +79,7 @@ archivePrefix = {arXiv},
     title = "{300 nights of science with IGRINS at McDonald Observatory}",
 booktitle = {Ground-based and Airborne Instrumentation for Astronomy VI},
      year = 2016,
-   series = {\procspie},
+   series = {Proceedings of the SPIE},
    volume = 9908,
     month = aug,
       eid = {99080C},
@@ -103,7 +103,7 @@ booktitle = {Ground-based and Airborne Instrumentation for Astronomy VI},
          {Levine}, Stephen and {Nofi}, Larissa and {Lopez-Valdivia}, Ricardo and
          {Weinberger}, Alycia J. and {Jaffe}, Daniel T.},
         title = "{IGRINS at the Discovery Channel Telescope and Gemini South}",
-    booktitle = {\procspie},
+    booktitle = {Proceedings of the SPIE},
          year = 2018,
        series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
        volume = {10702},
@@ -128,7 +128,7 @@ booktitle = {Ground-based and Airborne Instrumentation for Astronomy VI},
     title = "{Design and early performance of IGRINS (Immersion Grating Infrared Spectrometer)}",
 booktitle = {Ground-based and Airborne Instrumentation for Astronomy V},
      year = 2014,
-   series = {\procspie},
+   series = {Proceedings of the SPIE},
    volume = 9147,
     month = jul,
       eid = {91471D},
@@ -147,7 +147,7 @@ booktitle = {Ground-based and Airborne Instrumentation for Astronomy V},
          {Park}, Won-Kee and {Lacy}, John and {Goertz}, John and {Rand}, Jared and
          {Gully-Santiago}, Michael},
         title = "{Preliminary design of IGRINS (Immersion GRating INfrared Spectrograph)}",
-    booktitle = {\procspie},
+    booktitle = {Proceedings of the SPIE},
          year = 2010,
        series = {Society of Photo-Optical Instrumentation Engineers (SPIE) Conference Series},
        volume = {7735},
@@ -187,7 +187,7 @@ Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. 
 Doi = {10.1051/0004-6361/201322068},
 Eid = {A33},
 Eprint = {1307.6212},
-Journal = {\aap},
+Journal = {Astronomy \& Astrophysics},
 Keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
 Month = oct,
 Pages = {A33},
@@ -242,7 +242,7 @@ Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361/201322068}}
          {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and
          {Zabalza}, V. and {Astropy Contributors}},
         title = "{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}",
-      journal = {\aj},
+      journal = {Astronomical Journal},
      keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2018,
         month = sep,
@@ -356,7 +356,7 @@ archivePrefix = {arXiv},
 @ARTICLE{gao16,
        author = {{Gao}, Peter and {Plavchan}, P. and {Gagn{\'e}}, J. and {Furlan}, E. and {Bottom}, M. and {Anglada-Escud{\'e}}, G. and {White}, R. and {Davison}, C.~L. and {Beichman}, C. and {Brinkworth}, C. and {Johnson}, J. and {Ciardi}, D. and {Wallace}, K. and {Mennesson}, B. and {von Braun}, K. and {Vasisht}, G. and {Prato}, L. and {Kane}, S.~R. and {Tanner}, A. and {Crawford}, T.~J. and {Latham}, D. and {Rougeot}, R. and {Geneser}, C.~S. and {Catanzarite}, J.},
         title = "{Retrieval of Precise Radial Velocities from Near-infrared High-resolution Spectra of Low-mass Stars}",
-      journal = {\pasp},
+      journal = {Publications of the Astronomical Society of the Pacific},
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2016,
         month = oct,
@@ -374,7 +374,7 @@ archivePrefix = {arXiv},
 @ARTICLE{cale19,
        author = {{Cale}, Bryson and {Plavchan}, Peter and {LeBrun}, Danny and {Gagn{\'e}}, Jonathan and {Gao}, Peter and {Tanner}, Angelle and {Beichman}, Charles and {Xuesong Wang}, Sharon and {Gaidos}, Eric and {Teske}, Johanna and {Ciardi}, David and {Vasisht}, Gautam and {Kane}, Stephen R. and {von Braun}, Kaspar},
         title = "{Precise Radial Velocities of Cool Low-mass Stars with iSHELL}",
-      journal = {\aj},
+      journal = {Astronomical Journal},
      keywords = {atmospheric effects, infrared: stars, methods: data analysis, stars: individual: 61 Cygni A, Barnard{\textquoteright}s Star, GJ 15 A, techniques: radial velocities, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
          year = 2019,
         month = nov,
@@ -393,7 +393,7 @@ archivePrefix = {arXiv},
 @ARTICLE{hira20,
        author = {{Hirano}, Teruyuki and {Kuzuhara}, Masayuki and {Kotani}, Takayuki and {Omiya}, Masashi and {Kudo}, Tomoyuki and {Harakawa}, Hiroki and {Vievard}, S{\'e}bastien and {Kurokawa}, Takashi and {Nishikawa}, Jun and {Tamura}, Motohide and {Hodapp}, Klaus and {Ishizuka}, Masato and {Jacobson}, Shane and {Konishi}, Mihoko and {Serizawa}, Takuma and {Ueda}, Akitoshi and {Gaidos}, Eric and {Sato}, Bun'ei},
         title = "{Precision radial velocity measurements by the forward-modeling technique in the near-infrared}",
-      journal = {\pasj},
+      journal = {Publications of the Astronomical Society of Japan},
      keywords = {methods: data analysis, planets and satellites: detection, techniques: radial velocities, techniques: spectroscopic, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
          year = 2020,
         month = dec,
@@ -413,7 +413,7 @@ archivePrefix = {arXiv},
 @ARTICLE{mout20,
        author = {{Moutou}, C. and {Dalal}, S. and {Donati}, J. -F. and {Martioli}, E. and {Folsom}, C.~P. and {Artigau}, {\'E}. and {Boisse}, I. and {Bouchy}, F. and {Carmona}, A. and {Cook}, N.~J. and {Delfosse}, X. and {Doyon}, R. and {Fouqu{\'e}}, P. and {Gaisn{\'e}}, G. and {H{\'e}brard}, G. and {Hobson}, M. and {Klein}, B. and {Lecavelier des Etangs}, A. and {Morin}, J.},
         title = "{Early science with SPIRou: near-infrared radial velocity and spectropolarimetry of the planet-hosting star HD 189733}",
-      journal = {\aap},
+      journal = {Astronomy \& Astrophysics},
      keywords = {planetary systems, stars: magnetic field, stars: activity, techniques: radial velocities, techniques: polarimetric, techniques: spectroscopic, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
          year = 2020,
         month = oct,
@@ -431,7 +431,7 @@ archivePrefix = {arXiv},
 @ARTICLE{zech18,
        author = {{Zechmeister}, M. and {Reiners}, A. and {Amado}, P.~J. and {Azzaro}, M. and {Bauer}, F.~F. and {B{\'e}jar}, V.~J.~S. and {Caballero}, J.~A. and {Guenther}, E.~W. and {Hagen}, H. -J. and {Jeffers}, S.~V. and {Kaminski}, A. and {K{\"u}rster}, M. and {Launhardt}, R. and {Montes}, D. and {Morales}, J.~C. and {Quirrenbach}, A. and {Reffert}, S. and {Ribas}, I. and {Seifert}, W. and {Tal-Or}, L. and {Wolthoff}, V.},
         title = "{Spectrum radial velocity analyser (SERVAL). High-precision radial velocities and two alternative spectral indicators}",
-      journal = {\aap},
+      journal = {Astronomy \& Astrophysics},
      keywords = {methods: data analysis, techniques: radial velocities, techniques: spectroscopic, planets and satellites: detection, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
          year = 2018,
         month = jan,
@@ -449,7 +449,7 @@ archivePrefix = {arXiv},
 @ARTICLE{seif08,
        author = {{Seifahrt}, A. and {K{\"a}ufl}, H.~U.},
         title = "{High precision radial velocity measurements in the infrared. A first assessment of the RV stability of CRIRES}",
-      journal = {\aap},
+      journal = {Astronomy \& Astrophysics},
      keywords = {instrumentation: spectrographs, instrumentation: adaptive optics, methods: observational, techniques: radial velocities, techniques: spectroscopic, stars: AGB and post-AGB, Astrophysics},
          year = 2008,
         month = dec,
@@ -467,7 +467,7 @@ archivePrefix = {arXiv},
 @ARTICLE{fig10,
        author = {{Figueira}, P. and {Pepe}, F. and {Lovis}, C. and {Mayor}, M.},
         title = "{Evaluating the stability of atmospheric lines with HARPS}",
-      journal = {\aap},
+      journal = {Astronomy \& Astrophysics},
      keywords = {atmospheric effects, instrumentation: spectrographs, methods: observational, techniques: radial velocities, planetary systems, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
          year = 2010,
         month = jun,
